--- a/Sass/main.css
+++ b/Sass/main.css
@@ -197,8 +197,7 @@ button:focus {
 .contact-container {
   max-width: 600px;
   width: 100%;
-  margin-left: 44%;
-  margin-right: 0px;
+  float: right;
 }
 
 #contact h3 {
@@ -227,7 +226,7 @@ fieldset {
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea {
-  width: 100%;
+  width: 80%;
   border: 1px solid #ccc;
   background: #fff;
   margin: 0 0 5px;
@@ -256,7 +255,6 @@ fieldset {
   background: #000203;
   color: lightgreen;
   margin-top: 10px;
-  margin-right: -20px;
   padding-top: 20px;
   padding-right: 50px;
   padding-bottom: 20px;
@@ -342,8 +340,8 @@ fieldset {
   height: 100vh;
   text-align: right;
   margin-right: 15vw;
-  margin-left: 15vw;
-  width: 60%;
+  margin-left: 20vw;
+  width: 55%;
   padding-top: 15vh;
 }
 
@@ -353,7 +351,7 @@ fieldset {
 
 #contact p {
   width: 60%;
-  padding-left: 37%;
+  padding-left: 38%;
 }
 
 #contact h2 {
@@ -415,9 +413,9 @@ fieldset {
 
 #portfolio {
   height: 100%;
-  margin-right: 15vw;
-  margin-left: 15vw;
-  width: 60%;
+  margin-right: 20vw;
+  margin-left: 20vw;
+  width: 55%;
   padding-top: 15vh;
 }
 
@@ -984,5 +982,9 @@ header {
   #nav-icon3 {
     display: inline;
   }
+}
+
+footer {
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
