--- a/Sass/pages/_contact.scss
+++ b/Sass/pages/_contact.scss
@@ -2,8 +2,8 @@
   height: 100vh;
   text-align: right;
   margin-right: 15vw;
-  margin-left: 15vw;
-  width: 60%;
+  margin-left: 20vw;
+  width: 55%;
   padding-top: 15vh;
   .aboutHorizontalLine {
     width: 100%;
@@ -11,7 +11,7 @@
 
   p {
     width: 60%;
-    padding-left: 37%;
+    padding-left: 38%;
   }
 
   h2 {
