--- a/Sass/pages/_portfolio.scss
+++ b/Sass/pages/_portfolio.scss
@@ -12,9 +12,9 @@
 
 #portfolio {
   height: 100%;
-  margin-right: 15vw;
-  margin-left: 15vw;
-  width: 60%;
+  margin-right: 20vw;
+  margin-left: 20vw;
+  width: 55%;
   padding-top: 15vh;
 
   h2 {
